--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBNRtOlaQNF6qjGF8-FGK79x4y7BTbdWr4" />
+            android:value="@string/google_maps_key" />
 
         <activity
             android:name=".MainActivity"
